[package]
name = "ncomm"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Rust Node-Based Communication Prototype Framework"
homepage = "https://github.com/N8BWert/ncomm"
repository = "https://github.com/N8BWert/ncomm"
readme = "README.md"

[dependencies]
ctrlc = "3.4.0"

[dependencies.packed_struct]
version = "0.10.1"
optional = true

[features]
default = []
packed-struct = ["dep:packed_struct"]