[workspace]
members = [
    "ncomm",
    "ncomm-core",
    "ncomm-utils",
    "ncomm-executors",
    "ncomm-publishers-and-subscribers",
    "ncomm-clients-and-servers",
    "ncomm-update-clients-and-servers",
    "ncomm-nodes",
    "examples/minimal-client-server",
    "examples/minimal-update-client-server",
    "examples/minimal-publisher-subscriber",
    "examples/rerun-publisher",
]

default-members = [
    "ncomm",
    "ncomm-core",
    "ncomm-utils",
    "ncomm-executors",
    "ncomm-publishers-and-subscribers",
    "ncomm-clients-and-servers",
    "ncomm-update-clients-and-servers",
    "ncomm-nodes",
]
resolver = "2"

[workspace.package]
version = "1.1.3"
edition = "2021"
license = "MIT"
description = "Rust Node-Based Communication Prototype Framework"
keywords = ["robotics", "middleware", "NComm"]
homepage = "https://github.com/N8BWert/ncomm"
repository = "https://github.com/N8BWert/ncomm"
readme = "README.md"
authors = ["Nate Wert <n8.wert.b@gmail.com>"]
categories = ["science::robotics"]

[workspace.dependencies]
# NComm
ncomm = { path = "ncomm", version = "1.1.3", default-features = false }
ncomm-core = { path = "ncomm-core", version = "1.1.3", default-features = false }
ncomm-utils = { path = "ncomm-utils", version = "1.1.3", default-features = false }
ncomm-executors = { path = "ncomm-executors", version = "1.1.3", default-features = false }
ncomm-publishers-and-subscribers = { path = "ncomm-publishers-and-subscribers", version = "1.1.3", default-features = false }
ncomm-clients-and-servers = { path = "ncomm-clients-and-servers", version = "1.1.3", default-features = false }
ncomm-update-clients-and-servers = { path = "ncomm-update-clients-and-servers", version = "1.1.3", default-features = false }
ncomm-nodes = { path = "ncomm-nodes", version = "1.1.3", default-features = false }

# Outside Dependencies
crossbeam = "0.8.4"
quanta = "0.12.3"
threadpool = "1.8.1"
ctrlc = "3.4.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rerun = "0.18.2"
re_web_viewer_server = "0.18.2"
re_ws_comms = "0.18.2"
embedded-io = "0.6.1"
