[package]
name = "ncomm-clients-and-servers"
description = "NComm Clients and Servers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true, optional = true }
ncomm-core = { workspace = true, default-features = false }
ncomm-utils = { workspace = true, default-features = false }
embedded-io = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
nostd = ["ncomm-core/nostd", "ncomm-utils/nostd"]
alloc = ["nostd", "ncomm-core/alloc", "ncomm-utils/alloc"]
std = ["dep:crossbeam", "ncomm-core/std", "ncomm-utils/std"]
