[package]
name = "ncomm-executors"
description = "NComm Executors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true }
ncomm-core = { workspace = true }
quanta = { workspace = true }
threadpool = { workspace = true }
