[package]
name = "ncomm-executors"
description = "NComm Executors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true, optional = true }
ncomm-core = { workspace = true, default-features = false }
quanta = { workspace = true, optional = true }
threadpool = { workspace = true, optional = true }

[features]
default = ["std"]
nostd = ["ncomm-core/nostd"]
alloc = ["nostd", "ncomm-core/alloc"]
std = ["ncomm-core/std", "dep:crossbeam", "dep:quanta", "dep:threadpool"]
