[package]
name = "ncomm-nodes"
description = "A collection of common Nodes for use in NComm projects"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
