[package]
name = "ncomm-nodes"
description = "A collection of common Nodes for use in NComm projects"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
rerun = { workspace = true, optional = true }
re_web_viewer_server = { workspace = true, optional = true }
re_ws_comms = { workspace = true, optional = true }
ncomm-core = { workspace = true }
ncomm-publishers-and-subscribers = { workspace = true }

[features]
default = []
rerun = ["dep:rerun", "ncomm-publishers-and-subscribers/rerun"]
rerun-web-viewer = ["rerun", "rerun/web_viewer", "dep:re_web_viewer_server", "dep:re_ws_comms"]
