[package]
name = "ncomm-publishers-and-subscribers"
description = "NComm Publishers and Subscribers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true }
ncomm-core = { workspace = true, default-features = false }
ncomm-utils = { workspace = true, default-features = false }
quanta = { workspace = true }
rerun = { workspace = true, optional = true }
embedded-io = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
nostd = ["ncomm-core/nostd", "ncomm-utils/nostd"]
alloc = ["nostd", "ncomm-core/alloc", "ncomm-utils/alloc"]
std = ["ncomm-core/std", "ncomm-utils/std"]
rerun = ["std", "dep:rerun"]
