[package]
name = "ncomm-utils"
description = "NComm Common Utilities Crate."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

[features]
default = ["std"]
nostd = []
alloc = []
std = []