[package]
name = "minimal-client-server"
description = "Minimal Client and Server example based on the [Ros 2 Tutorial](https://docs.ros.org/en/foxy/Tutorials/Beginner-Client-Libraries/Writing-A-Simple-Cpp-Service-And-Client.html)"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
ncomm-core = { workspace = true, features=["std"] }
ncomm-executors = { workspace = true, features=["std"] }
ncomm-clients-and-servers = { workspace = true, features=["std"] }
crossbeam = { workspace = true }
ctrlc = { workspace = true }
rand = { workspace = true }
