[package]
name = "minimal-publisher-subscriber"
description = "Minimal Publisher and Subscriber example based on the [Ros2 Tutorial](https://docs.ros.org/en/foxy/Tutorials/Beginner-Client-Libraries/Writing-A-Simple-Cpp-Publisher-And-Subscriber.html)"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
ncomm-core = { workspace = true }
ncomm-executors = { workspace = true }
ncomm-publishers-and-subscribers = { workspace = true }
crossbeam = { workspace = true }
ctrlc = { workspace = true }