[package]
name = "rerun-publisher"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
crossbeam = { workspace = true }
ctrlc = { workspace = true }
ncomm-core = { workspace = true }
ncomm-executors = { workspace = true }
ncomm-nodes = { workspace = true, features = ["rerun"] }
ncomm-publishers-and-subscribers = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rerun = { workspace = true }
