[package]
name = "rerun-publisher"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
crossbeam = { workspace = true }
ctrlc = { workspace = true }
ncomm-core = { workspace = true, features = ["std"] }
ncomm-executors = { workspace = true, features = ["std"] }
ncomm-nodes = { workspace = true, features = ["std", "rerun"] }
ncomm-publishers-and-subscribers = { workspace = true, features = ["std", "rerun"] }
rand = { workspace = true }
rand_distr = { workspace = true }
rerun = { workspace = true }
